adding appointment functions

--- a/src/app/Admin/login/login.component.html
+++ b/src/app/Admin/login/login.component.html
@@ -14,6 +14,10 @@
           <span class="button__text" >Log In Now</span>
           <i class="button__icon fas fa-chevron-right"></i>
         </button>
+        <a class="button login__submit" href="signUpA">
+          <span class="button__text" >Sign Up</span>
+          <i class="button__icon fas fa-chevron-right"></i>
+        </a>
       </form>
 
     </div>
