--- a/src/app/Admin/sign-up/sign-up.component.html
+++ b/src/app/Admin/sign-up/sign-up.component.html
@@ -72,7 +72,7 @@
               </div>
 <!--routerLink="/loginPatient" routerLinkActive="active"-->
             </form>
-            <a href="" style="color: #0066FF; margin-left: 8rem;"  routerLink="/loginPatient" routerLinkActive="active">vouz avez déja un compte</a>
+            <a href="" style="color: #0066FF; margin-left: 8rem;"  routerLink="/login" routerLinkActive="active">vouz avez déja un compte</a>
 
           </div>
         </div>
