--- a/src/app/EspacePatient/profile-patient/profile-patient.component.html
+++ b/src/app/EspacePatient/profile-patient/profile-patient.component.html
@@ -29,12 +29,17 @@
 
       <li class="nav-item">
         <a class="nav-link" href="javascript:void(0)" routerLink="/formuleRndv" routerLinkActive="active">
-          <i class="bi bi-calendar-plus-fill text-primary" ></i> Prendre rendez-vous
+          <i class="bi bi-calendar-plus-fill " style="color: white" ></i> Prendre rendez-vous
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="javascript:void(0)" routerLink="/messagesfromAdmin" routerLinkActive="active">
-          <i class="bi bi-envelope-fill text-primary"></i>Message
+          <i class="bi bi-envelope-fill "  style="color: white"></i>Message
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="javascript:void(0)" routerLink="/listRdv" routerLinkActive="active">
+          <i class="bi bi-envelope-fill  " style="color: white"></i>Liste de rendez-vous
         </a>
       </li>
 
