--- a/src/app/servicePatient/chirurgies/chirurgies.component.html
+++ b/src/app/servicePatient/chirurgies/chirurgies.component.html
@@ -20,7 +20,7 @@
       </div>
 
       <div class="btn col-md-6">
-        <button onclick="window.location.href ='signPatient';">Prendre Rendez-vous</button>
+        <button (click)="prendreRDV(chirurgie.id)">Prendre Rendez-vous</button>
       </div>
 
     </div>
