--- a/src/app/detail-profile/detail-profileA/rendez-vous/rdv-sans-medecin/rdv-avec-medecin.component.html
+++ b/src/app/detail-profile/detail-profileA/rendez-vous/rdv-sans-medecin/rdv-avec-medecin.component.html
@@ -1,15 +1,16 @@
 <div class="col all-content">
-  <h5>Messages</h5>
+  <h5>Demande des rendez-vous</h5>
   <div class="card all-card">
     <div class="card one-card shadow-sm p-3 mb-5 bg-#FFF9F3rounded"
     *ngFor="let apntmnt of appointmentRes">
       <h3>{{apntmnt.patient.firstname}} {{apntmnt.patient.lastname}}</h3>
       <h6 style="margin-top: 1rem">{{apntmnt.surgery.name}} </h6>
-      <h6 style="font-weight: bold">{{apntmnt.dateRDV}}
+
+      <h6 style="font-weight: bold">{{apntmnt.dateRDV }}
         <span><i class="bi bi-calendar-date-fill" style="color: indianred ; float: right ;"></i></span>
       </h6>
       <div class="btn">
-        <button  (click)="detailAppntmnt(apntmnt.id)">Voir detail</button>
+        <button  (click)="detailapntmnt(apntmnt.id)">Voir detail</button>
       </div>
     </div>
 
