--- a/src/app/detail-profile/detail-profileP/formule-rndv/formule-rndv.component.scss
+++ b/src/app/detail-profile/detail-profileP/formule-rndv/formule-rndv.component.scss
@@ -68,3 +68,27 @@ option{
   border: none;
 
 }
+/* Style for the input element */
+input[type=datetime-local] {
+  /* Set font size, font family and background color */
+  font-size: 16px;
+  font-family: Arial, sans-serif;
+  background-color: #fff;
+
+  /* Set border properties */
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+
+  /* Set padding and margin */
+  padding: 6px 10px;
+  margin: 10px 0;
+}
+
+/* Style for the label */
+label[for=datetime] {
+  /* Set font size and font family */
+  font-size: 16px;
+  font-family: Arial, sans-serif;
+  margin-right: 10px; /* Add some space between label and input */
+}
