--- a/src/app/detail-profile/detail-profileA/detail-msg-patient/detail-msg-patient.component.html
+++ b/src/app/detail-profile/detail-profileA/detail-msg-patient/detail-msg-patient.component.html
@@ -82,7 +82,7 @@
       </div>
 
       <div class="btn">
-        <button (click)="affecterMedecin()">Affecter un Medecin</button>
+        <button (click)="affecterMedecin(apntmnt.surgery.id,apntmnt.id)">Affecter un Medecin</button>
       </div>
 
 
