--- a/src/app/detail-profile/detail-profileA/medecin/list-medecin/list-medecin.component.html
+++ b/src/app/detail-profile/detail-profileA/medecin/list-medecin/list-medecin.component.html
@@ -27,7 +27,7 @@
         </div>
 
       </div>
-      <div class="col col-2" data-label="Nom et Prénom">{{medecin.specialite}}</div>
+      <div class="col col-2" data-label="Nom et Prénom">{{getSpecialiteWithoutBrackets(medecin.specialite)}}</div>
       <div class="col col-3" data-label="Status">active  <i class="bi bi-circle-fill" style="color: green ; font-size:10px"></i></div>
 
         <div class="dropdown  col col-4"  data-label="Action">
