--- a/src/app/detail-profile/detail-profileM/dashboard/dashboard.component.html
+++ b/src/app/detail-profile/detail-profileM/dashboard/dashboard.component.html
@@ -17,7 +17,9 @@
         </div>
         <div class="card-body">
           <div class="chart-area">
-            <canvas id="myAreaChart"></canvas>
+            <div>
+              <canvas id="appointmentChart"></canvas>
+            </div>
           </div>
           <hr>
           Styling for the area chart
@@ -27,14 +29,20 @@
       <!-- Bar Chart -->
       <div class="card shadow mb-4">
         <div class="card-header py-3">
-          <h6 class="m-0 font-weight-bold text-primary">Bar Chart</h6>
+          <h6 class="m-0 font-weight-bold text-primary">Nombres des patients Female, Male, Total</h6>
         </div>
         <div class="card-body">
-          <div class="chart-bar">
-            <canvas id="myBarChart"></canvas>
+          <div class="chart-bar" >
+            <div>
+              <canvas baseChart
+                      [datasets]="barChartData"
+                      [labels]="barChartLabels"
+                      [options]="barChartOptions"
+                      [legend]="barChartLegend"
+                    ></canvas>
+            </div>
           </div>
-          <hr>
-          Styling for the bar chart
+
         </div>
       </div>
 
