--- a/src/app/servicePatient/chirurgies/chirurgies.component.html
+++ b/src/app/servicePatient/chirurgies/chirurgies.component.html
@@ -16,7 +16,7 @@
   <!---- <h5 style="margin-top:3rem">{{chirurgie.du}}</h5>-->
     <div class="row col-md-12">
       <div class="btn2 col-md-6">
-        <button onclick="window.location.href ='chirurgieSelecionnee';">Choisir un Médecin</button>
+        <button (click)="choisirMedecin(chirurgie.id)">Choisir un Médecin</button>
       </div>
 
       <div class="btn col-md-6">
