--- a/src/app/composants/header/header.component.html
+++ b/src/app/composants/header/header.component.html
@@ -22,7 +22,7 @@
         </div>
       </li>
        <li class="nav-item active " style="margin-left: 4rem">
-         <a class="nav-link" href="">A Propos </a>
+         <a class="nav-link" href="/apropos">A Propos </a>
        </li>
 
       <li class="nav-item dropdown " style="margin-left: 13rem">
