--- a/src/app/detail-profile/detail-profileA/dashboard-admin/dashboard-admin.component.scss
+++ b/src/app/detail-profile/detail-profileA/dashboard-admin/dashboard-admin.component.scss
@@ -1,6 +1,63 @@
 span{
   color: white !important;
 }
+
+#doughnutChart {
+  width: 200px; /* Set desired width */
+  height: 100px; /* Set desired height */
+}
+
+
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+  cursor: pointer;
+}
+flip-card-row{
+  width: 100%;
+  height: auto;
+  display: flex !important;
+  justify-content: center;
+}
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+ padding-top: 1rem;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+
+
 :root {
   --blue: #4e73df;
   --indigo: #6610f2;
